<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.danie.dmes_shopchop.SignupActivity"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_SignupHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/tvSignup_Headline"
            android:textSize="52sp" />

        <TextView
            android:id="@+id/tv_SignupSubHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_SignupHeadline"
            android:layout_centerHorizontal="true"
            android:text="@string/tvSignup_SubHeadline"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/img_btn_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_SignupSubHeadline"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/imgDsc_picker"
            app:srcCompat="@mipmap/ic_launcher_round" />



        <EditText
            android:id="@+id/etxt_FullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/img_btn_picker"
            android:ems="10"
            android:hint="@string/etFull_name"
            android:inputType="textPersonName" />



        <EditText
            android:id="@+id/etxt_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etxt_FullName"
            android:ems="10"
            android:hint="@string/etEmail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etxt_Pwrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etxt_Email"
            android:ems="10"
            android:hint="@string/etPassword"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etxt_CPwrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etxt_Pwrd"
            android:ems="10"
            android:hint="@string/etCpassword"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etxt_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etxt_CPwrd"
            android:ems="10"
            android:hint="@string/etPhone"
            android:inputType="phone" />

        <Button
            android:id="@+id/btn_Signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etxt_Phone"
            android:onClick="onClickSignUp"
            android:text="@string/etSign_up" />

    </RelativeLayout>

</ScrollView>
